# mmex-cli

./: Cargo.toml  README.md
.github/workflows/: publish-rust.yml
docs/: implemented_features.md
src/: cli.rs  main.rs  output.rs
src/commands/: accounts.rs  assets.rs  categories.rs  currencies.rs  mod.rs  payees.rs  scheduled.rs  stocks.rs  support.rs  tags.rs  transactions.rs
