[package]
name = "mmex_cli"
version = "0.1.0"
edition = "2021"
authors = ["Patricio Rios"]
description = "CLI for Money Manager EX database operations"
license = "MIT"
repository = "https://github.com/PatricioRios/mmex_cli"
readme = "README.md"
keywords = ["mmex", "cli", "finance", "money-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "mmex"
path = "src/main.rs"

[dependencies]
mmex_lib = "0.1.0-beta.2"
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.1"
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
