[package]
name = "mmex-cli"
version = "0.1.1"
edition = "2021"
authors = ["Patricio Rios"]
description = "CLI for Money Manager EX database operations"
license = "MIT"
repository = "https://github.com/PatricioRios/mmex-cli"
readme = "README.md"
keywords = ["mmex", "cli", "finance", "money-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "mmex"
path = "src/main.rs"

[dependencies]
mmex_lib = { version = "0.1.1-beta.1" }
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.1"
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
